V1.6.4 - List.of not supported in java 8 and remove useless import